# rcpsp

./: README.md  main.py  pyproject.toml  visualize.py  visualize_template.html
examples/: input.json
scheduler/: __init__.py  data.py  output.py  parser.py  scheduler.py
tests/: test_calendars.py  test_parser.py  test_scheduler.py
